--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
         </div>
 
         <div class="layout">
-            <div>
-                <h2 class="leftside"><span class="leftside-item">Work</span></h1>
-            </div>
-            <div class="rightside">          
+            <h2 class="leftside">Work</h2>
+            <div class="rightside cards">          
                 <div class="content" id="surf">
                     <a class="piclink" href="">
                         <img class=blurimg src="./assets/images/surf-report.jpg" alt="surf report">
@@ -99,9 +97,7 @@
     </main>
 
     <footer class="layout" id="contact">
-        <div>
-            <h2 class="leftside"><span class="leftside-item">Contact</span><span class="leftside-item">Me</span></h1>
-        </div>
+        <h2 class="leftside">Contact<br>Me</h2>
         <div class="rightside">
             <ul >
                 <li><a href="">0000-000-000</a></li>
