modify footer css

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
     <footer class="layout" id="contact">
         <h2 class="leftside">Contact<br>Me</h2>
-        <div class="rightside">
-            <ul class="footer-contact">
+        <div class="rightside footer">
+            <ul class="footer-list">
                 <li><a href="">0000-000-000</a></li>
                 <li><a href="">rainyliusy@hotmail.com</a></li>
                 <li><a href="">Github</a></li>
