add responsive design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <section class="rightside cards">          
                 <figure class="content" id="surf">
                     <a class="piclink" href="">
-                        <img class=blur-img src="./assets/images/surf-report.jpg" alt="surf report">
+                        <img class="blur-img surf-img" src="./assets/images/surf-report.jpg" alt="surf report">
                         <div class="item">
                             <h3 class="item-title">Surf Report</h3>
                             <p class="item-subtitle">MERN Stack</p>
