polishing index file and add some hyperlink

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
                 <li><a href="#info">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="assets/resume.html">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -28,9 +27,8 @@
         <section class="layout">
             <h2 class="leftside" id="info">About<br>Me</h1>
             <article class="rightside">
-                <p>I am an enthusiastic, self-motivated, reliable, responsible and hard working person. I am a mature team worker and
-                adaptable to all challenging situations. I am able to work well both in a team environment as well as using own
-                initiative. I am able to work well under pressure and adhere to strict deadlines.
+                <p>My name is Siyu, I live in Sydney and working as an accountant for couple of years and currently seeking for a career change to IT industry in my life. 
+                I enjoy reading, normally spend hours on it everyday. And walking in the park is also a part of my daily routine.  
                 <br><br>
                 I am an enthusiastic, self-motivated, reliable, responsible and hard working person. I am a mature team worker and
                 adaptable to all challenging situations. I am able to work well both in a team environment as well as using own
