--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
         <h2 class="leftside">Contact<br>Me</h2>
         <section class="rightside footer">
             <ul class="footer-list">
-                <li><a href="">0000-000-000</a></li>
-                <li><a href="">rainyliusy@hotmail.com</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Spotify</a></li>
+                <li><a href="">0424-061-509</a></li>
+                <li><a href="mailto:siyu.liu.job@gmail.com">siyu.liu.job@gmail.com</a></li>
+                <li><a href="https://github.com/gulama2008">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/siyu-liu-387804253/">Linkedin</a></li>
+                <!-- <li><a href="">Spotify</a></li> -->
             </ul>
         </section>      
     </footer>
