add work link and resume

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <li><a href="#info">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="assets/resume.html">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/1DnRBK4rC8LvoTbD8JuMFQohBzQFDvNpY/edit?usp=sharing&ouid=105126270122378532254&rtpof=true&sd=true" target='_blank'>Resume</a></li>
             </ul>
         </nav>
     </header>
     <figure class="background">
-        <h2>Cool subtitle here!</h2>
+        <h2>My Portfolio</h2>
     </figure>
 
     <main>
         <section class="layout">
             <h2 class="leftside" id="info">About<br>Me</h1>
             <article class="rightside">
-                <p>My name is Siyu, I live in Sydney and working as an accountant for couple of years and currently seeking for a career change to IT industry in my life. 
+                <p>My name is Siyu, I live in Sydney and working as an accountant for couple of years. I have great passion in programming that's why I'm currently seeking for a career change to IT industry in my life. 
                 I enjoy reading, normally spend hours on it everyday. And walking in the park is also a part of my daily routine.  
                 <br><br>
                 I am an enthusiastic, self-motivated, reliable, responsible and hard working person. I am a mature team worker and
@@ -40,50 +40,50 @@
             <h2 class="leftside" id="work">Work</h2>
             <section class="rightside cards">          
                 <figure class="content" id="surf">
-                    <a class="piclink" href="">
-                        <img class="blur-img surf-img" src="./assets/images/surf-report.jpg" alt="surf report">
+                    <a class="piclink" href="https://gulama2008.github.io/Movie-Search-Engine/" target="_blank">
+                        <img class="blur-img surf-img" src="./assets/images/woman-deciding-what-to-watch.jpg" alt="surf report">
                         <div class="item">
-                            <h3 class="item-title">Surf Report</h3>
-                            <p class="item-subtitle">MERN Stack</p>
+                            <h3 class="item-title">Movie Search Engine</h3>
+                            <p class="item-subtitle">JavaScript/HTML/CSS/Web API</p>
                         </div>
                     </a>                      
                 </figure>
                 <div class="card-inline">
                     <figure class="content smallbox" id="led-wall">
-                        <a class="piclink" href="">
-                            <img class="blur-img" src="./assets/images/led-wall.jpg" alt="led wall">
+                        <a class="piclink" href="https://mighty-ridge-85314.herokuapp.com/" target="_blank">
+                            <img class="blur-img" src="./assets/images/demodog.png" alt="led wall">
                             <div class="item">
-                                <h3 class="item-title">LED Wall</h3>
-                                <p class="item-subtitle">Node/IoT</p>
+                                <h3 class="item-title">Furry Foster Home</h3>
+                                <p class="item-subtitle">Node/Express/MySQL/HTML/CSS/JS</p>
                             </div>
                         </a>
                     </figure>               
                     <figure class="content smallbox" id="calculator">
-                        <a class="piclink" href="">
-                            <img class="blur-img" src="./assets/images/calculator.jpg" alt="calculator">
+                        <a class="piclink" href="https://nameless-coast-74044.herokuapp.com/">
+                            <img class="blur-img" src="./assets/images/techblog.png" alt="calculator">
                             <div class="item">
-                                <h3 class="item-title">Calculator</h3>
-                                <p class="item-subtitle">React/JavaScript/CSS</p>
+                                <h3 class="item-title">Tech Blog</h3>
+                                <p class="item-subtitle">Node/JavaScript/CSS/MySQL</p>
                             </div>
                         </a>
                     </figure>
                 </div>              
                 <div class="card-inline">
                     <figure class="content smallbox" id="pastel-puzzles">
-                        <a class="piclink" href="">
-                            <img class="blur-img" src="./assets/images/pastel-puzzles.jpg" alt="">
+                        <a class="piclink" href="https://gulama2008.github.io/weather-dashboard/" target="_blank">
+                            <img class="blur-img" src="./assets/images/weather dashboard.png" alt="">
                             <div class="item">
-                                <h3 class="item-title">Pastel Puzzles</h3>
-                                <p class="item-subtitle">MERN Stack</p>
+                                <h3 class="item-title">Weather Dashboard</h3>
+                                <p class="item-subtitle">HTML/CSS/JS/Web APIs</p>
                             </div>
                         </a>
                     </figure>               
                     <figure class="content smallbox" id="run-buddy">
-                        <a class="piclink" href="">
-                            <img class="blur-img" src="./assets/images/run-buddy.jpg" alt="">
+                        <a class="piclink" href="https://agile-temple-11022.herokuapp.com" target="_blank">
+                            <img class="blur-img" src="./assets/images/note taker.png" alt="">
                             <div class="item">
-                                <h3 class="item-title">Run Buddy</h3>
-                                <p class="item-subtitle">HTML/CSS</p>
+                                <h3 class="item-title">Note Taker</h3>
+                                <p class="item-subtitle">Node/Express/HTML/CSS/JS</p>
                             </div>
                         </a>
                     </figure>
@@ -98,8 +98,8 @@
             <ul class="footer-list">
                 <li><a href="">0424-061-509</a></li>
                 <li><a href="mailto:siyu.liu.job@gmail.com">siyu.liu.job@gmail.com</a></li>
-                <li><a href="https://github.com/gulama2008">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/siyu-liu-387804253/">Linkedin</a></li>
+                <li><a href="https://github.com/gulama2008" target=“_blank”>Github</a></li>
+                <li><a href="https://www.linkedin.com/in/siyu-liu-387804253/" target=“_blank”>Linkedin</a></li>
                 <!-- <li><a href="">Spotify</a></li> -->
             </ul>
         </section>      
