add comments in HTML file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Siyu Liu</h1>
         <nav>
+            <!-- links to the contents on the page -->
             <ul>
                 <li><a href="#info">About Me</a></li>
                 <li><a href="#work">Work</a></li>
@@ -24,6 +25,7 @@
     </figure>
 
     <main>
+        <!-- the about me section for self-introduction -->
         <section class="layout">
             <h2 class="leftside" id="info">About<br>Me</h1>
             <article class="rightside">
@@ -38,37 +40,44 @@
 
         <section class="layout">
             <h2 class="leftside" id="work">Work</h2>
-            <section class="rightside cards">          
+            <!-- container for the projects blocks link -->
+            <section class="rightside cards">
+                <!-- project Movie Search Engine block -->
                 <figure class="content" id="surf">
                     <a class="piclink" href="https://gulama2008.github.io/Movie-Search-Engine/" target="_blank">
-                        <img class="blur-img surf-img" src="./assets/images/woman-deciding-what-to-watch.jpg" alt="surf report">
+                        <img class="blur-img surf-img" src="./assets/images/woman-deciding-what-to-watch.jpg" alt="Movie Search Engine">
                         <div class="item">
                             <h3 class="item-title">Movie Search Engine</h3>
                             <p class="item-subtitle">JavaScript/HTML/CSS/Web API</p>
                         </div>
                     </a>                      
                 </figure>
+                <!-- container for the Furry Foster Home and Tech Blog projects -->
                 <div class="card-inline">
+                    <!-- project Furry Foster Home block -->
                     <figure class="content smallbox" id="led-wall">
                         <a class="piclink" href="https://mighty-ridge-85314.herokuapp.com/" target="_blank">
-                            <img class="blur-img" src="./assets/images/demodog.png" alt="led wall">
+                            <img class="blur-img" src="./assets/images/demodog.png" alt="Furry Foster Home">
                             <div class="item">
                                 <h3 class="item-title">Furry Foster Home</h3>
                                 <p class="item-subtitle">Node/Express/MySQL/HTML/CSS/JS</p>
                             </div>
                         </a>
-                    </figure>               
+                    </figure>
+                    <!-- project Tech Blog block -->
                     <figure class="content smallbox" id="calculator">
                         <a class="piclink" href="https://nameless-coast-74044.herokuapp.com/">
-                            <img class="blur-img" src="./assets/images/techblog.png" alt="calculator">
+                            <img class="blur-img" src="./assets/images/techblog.png" alt="Tech Blog">
                             <div class="item">
                                 <h3 class="item-title">Tech Blog</h3>
                                 <p class="item-subtitle">Node/JavaScript/CSS/MySQL</p>
                             </div>
                         </a>
                     </figure>
-                </div>              
+                </div>
+                <!-- container for the Weather Dashboard and Note Taker projects -->
                 <div class="card-inline">
+                    <!-- project Weather Dashboard block -->
                     <figure class="content smallbox" id="pastel-puzzles">
                         <a class="piclink" href="https://gulama2008.github.io/weather-dashboard/" target="_blank">
                             <img class="blur-img" src="./assets/images/weather dashboard.png" alt="">
@@ -77,7 +86,8 @@
                                 <p class="item-subtitle">HTML/CSS/JS/Web APIs</p>
                             </div>
                         </a>
-                    </figure>               
+                    </figure>
+                    <!-- project Note Taker block -->
                     <figure class="content smallbox" id="run-buddy">
                         <a class="piclink" href="https://agile-temple-11022.herokuapp.com" target="_blank">
                             <img class="blur-img" src="./assets/images/note taker.png" alt="">
@@ -95,12 +105,12 @@
     <footer class="layout" id="contact">
         <h2 class="leftside">Contact<br>Me</h2>
         <section class="rightside footer">
+            <!-- contact details links -->
             <ul class="footer-list">
                 <li><a href="">0424-061-509</a></li>
                 <li><a href="mailto:siyu.liu.job@gmail.com">siyu.liu.job@gmail.com</a></li>
                 <li><a href="https://github.com/gulama2008" target=“_blank”>Github</a></li>
                 <li><a href="https://www.linkedin.com/in/siyu-liu-387804253/" target=“_blank”>Linkedin</a></li>
-                <!-- <li><a href="">Spotify</a></li> -->
             </ul>
         </section>      
     </footer>
